1.整体框架搭建起来了，使用easyRecyclerView，增加一些点击事件，上拉刷新，下拉加载 功能。 2.增加了首页闪现界面，对返回和销毁  不同状态下是否显示做了处理。

--- a/KeepLearn/app/src/main/res/layout/activity_splash.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_splash.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.study.dh.keeplearn.MainActivity">
+    tools:context="com.study.dh.keeplearn.Activity.SplashActivity">
 
-    <com.jude.easyrecyclerview.EasyRecyclerView
+    <ImageView
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listName_ER"
-        ></com.jude.easyrecyclerview.EasyRecyclerView>
-
-
+        android:id="@+id/startimg_iv"
+        />
 </RelativeLayout>
