--- a/KeepLearn/app/src/main/res/values/styles.xml
+++ b/KeepLearn/app/src/main/res/values/styles.xml
@@ -8,4 +8,48 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Theme.AppStartLoadTranslucent" parent="android:Theme">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="translucent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground" >@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    android:theme="@android:style/Theme.Dialog" //Activity显示为对话框模式
+
+    android:theme="@android:style/Theme.NoTitleBar" //不显示应用程序标题栏
+
+    android:theme="@android:style/Theme.NoTitleBar.Fullscreen" //不显示应用程序标题栏，并全屏
+
+    android:theme="Theme.Light " //背景为白色
+
+    android:theme="Theme.Light.NoTitleBar" //白色背景并无标题栏
+
+    android:theme="Theme.Light.NoTitleBar.Fullscreen" //白色背景，无标题栏，全屏
+
+    android:theme="Theme.Black" //背景黑色
+
+    android:theme="Theme.Black.NoTitleBar" //黑色背景并无标题栏
+
+    android:theme="Theme.Black.NoTitleBar.Fullscreen" //黑色背景，无标题栏，全屏
+
+    android:theme="Theme.Wallpaper" //用系统桌面为应用程序背景
+
+    android:theme="Theme.Wallpaper.NoTitleBar" //用系统桌面为应用程序背景，且无标题栏
+
+    android:theme="Theme.Wallpaper.NoTitleBar.Fullscreen" //用系统桌面为应用程序背景，无标题栏，全屏
+
+    android:theme="Theme.Translucent" //透明背景
+
+    android:theme="Theme.Translucent.NoTitleBar" //透明背景并无标题
+
+    android:theme="Theme.Translucent.NoTitleBar.Fullscreen" //透明背景并无标题，全屏
+
+    android:theme="Theme.Panel " //面板风格显示
+
+    android:theme="Theme.Light.Panel" //平板风格显示
+
 </resources>
