1.图片显示使用：Picasso  ； 2.网络请求使用：Retrofit  ； 3.暂时实现图片的加载功能；

--- a/KeepLearn/app/src/main/res/layout/content_item.xml
+++ b/KeepLearn/app/src/main/res/layout/content_item.xml
@@ -13,4 +13,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/content_time"
         />
+  <ImageView
+      android:scaleType="fitXY"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:id="@+id/content_pic"
+      />
 </LinearLayout>
