--- a/KeepLearn/app/src/main/res/layout/activity_entry.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_entry.xml
@@ -12,4 +12,18 @@
        android:text="图片浏览"
        android:id="@+id/lookPic_btn"
        />
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="GreenDao操作数据库"
+       android:textAllCaps="false"
+       android:id="@+id/handleDB_btn"
+       />
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="知乎日报简版"
+       android:textAllCaps="false"
+       android:id="@+id/zhihuDaily_btn"
+       />
 </LinearLayout>
