--- a/KeepLearn/app/src/main/res/layout/activity_detail.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_detail.xml
@@ -9,5 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.study.dh.keeplearn.Activity.DetailActivity">
-
+<ImageView
+    android:id="@+id/big_iv"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 </RelativeLayout>
