--- a/KeepLearn/app/src/main/res/layout/activity_zhihu_daily.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_zhihu_daily.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_zhihu_daily"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.study.dh.keeplearn.Activity.zhihuDailyActivity">
+    android:orientation="vertical"
+    tools:context="com.study.dh.keeplearn.zhihuDaily.zhihuDailyActivity">
 
-</RelativeLayout>
+    <com.bigkoo.convenientbanner.ConvenientBanner
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/topBanner"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:canLoop="true"
+
+    />
+    <com.jude.easyrecyclerview.EasyRecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/zhihulastinfo_er"
+        ></com.jude.easyrecyclerview.EasyRecyclerView>
+
+</LinearLayout>
