--- a/KeepLearn/app/src/main/res/layout/content_item.xml
+++ b/KeepLearn/app/src/main/res/layout/content_item.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
   <TextView
-      android:layout_width="match_parent"
+      android:layout_margin="10dp"
+      android:layout_weight="1"
+      android:text="标题啊标题"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/content_name"
       />
     <TextView
-        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/content_time"
         />
   <ImageView
+      android:layout_marginRight="10dp"
+      android:src="@mipmap/ic_launcher"
       android:scaleType="fitXY"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       android:id="@+id/content_pic"
       />
 </LinearLayout>
