增加了日报详细内容的展示，通过webview ，有待完善

--- a/KeepLearn/app/src/main/res/layout/activity_zhihu_daily.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_zhihu_daily.xml
@@ -6,19 +6,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.study.dh.keeplearn.zhihuDaily.zhihuDailyActivity">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
 
-    <com.bigkoo.convenientbanner.ConvenientBanner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/topBanner"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:canLoop="true"
+        android:layout_height="match_parent">
 
-    />
-    <com.jude.easyrecyclerview.EasyRecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/zhihulastinfo_er"
-        ></com.jude.easyrecyclerview.EasyRecyclerView>
+        <com.bigkoo.convenientbanner.ConvenientBanner
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/topBanner"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:canLoop="true"
+
+            />
+        <com.jude.easyrecyclerview.EasyRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/zhihulastinfo_er"
+            ></com.jude.easyrecyclerview.EasyRecyclerView>
+    </LinearLayout>
+
+</ScrollView>
+
+
 
 </LinearLayout>
