1.增加了eventBus 3.0的使用 实例

--- a/KeepLearn/app/src/main/res/layout/activity_entry.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_entry.xml
@@ -26,4 +26,16 @@
        android:textAllCaps="false"
        android:id="@+id/zhihuDaily_btn"
        />
+   <Button
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="知乎日报简版"
+       android:textAllCaps="false"
+       android:id="@+id/eventBus_btn"
+       />
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/eventBus_tv"
+       />
 </LinearLayout>
