--- a/KeepLearn/app/src/main/res/layout/activity_handle_db.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_handle_db.xml
@@ -7,38 +7,73 @@
     android:orientation="vertical"
     tools:context="com.study.dh.keeplearn.Activity.HandleDbActivity">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
+            android:layout_weight="1"
             android:id="@+id/bt_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="增加" />
 
         <Button
+            android:layout_weight="1"
+
             android:id="@+id/bt_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="删除" />
 
         <Button
+            android:layout_weight="1"
+
             android:id="@+id/bt_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="修改" />
 
         <Button
+            android:layout_weight="1"
             android:id="@+id/bt_query"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="查询" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+    <Button
+        android:textAllCaps="false"
+        android:id="@+id/MainEventAnother_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mainevent" />
+        <Button
+            android:textAllCaps="false"
+            android:id="@+id/AsyncEventAnother_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AsyncEvent" />
+        <Button
+            android:textAllCaps="false"
+            android:id="@+id/PostingEventAnother_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PostEvent" />
+        <Button
+            android:textAllCaps="false"
+            android:id="@+id/BackgroundEventAnother_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BgEvent" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/lv_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
