增加android6.0的判断申请逻辑   也可用第三方库  PermissionGen

--- a/KeepLearn/app/src/main/res/layout/activity_entry.xml
+++ b/KeepLearn/app/src/main/res/layout/activity_entry.xml
@@ -29,7 +29,7 @@
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:text="知乎日报简版"
+       android:text="eventBus"
        android:textAllCaps="false"
        android:id="@+id/eventBus_btn"
        />
