通过后台服务以及AsyncTask任务， 下载文件  博客记录：http://www.jianshu.com/p/28d818ead2dd

--- a/KeepLearn/lockapp/src/main/res/layout/activity_login.xml
+++ b/KeepLearn/lockapp/src/main/res/layout/activity_login.xml
@@ -46,5 +46,31 @@
         android:text="登陆"
         android:id="@+id/login_btn"
         />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="登陆l"
+        android:id="@+id/changetxt_btn"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="开始下载"
+        android:id="@+id/start_btn"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="暂停下载"
+        android:id="@+id/pause_btn"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="取消下载"
+        android:id="@+id/cancel_btn"
+        />
 </LinearLayout>
 
