--- a/KeepLearn/lockapp/src/main/res/layout/activity_login.xml
+++ b/KeepLearn/lockapp/src/main/res/layout/activity_login.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.study.dh.lockapp.activity.LoginActivity">
+
+    <com.study.dh.lockapp.myview.MyTitle
+        android:id="@+id/title_mt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.study.dh.lockapp.myview.MyTitle>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -71,6 +78,16 @@
         android:layout_height="wrap_content"
         android:text="取消下载"
         android:id="@+id/cancel_btn"
+
         />
+    <ProgressBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:max="100"
+        android:progress="20"
+        />
+
+
 </LinearLayout>
 
