--- a/KeepLearn/theyear/src/main/res/values/styles.xml
+++ b/KeepLearn/theyear/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorPrimary</item>    <!-- 标题栏的背景色 -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>    <!-- 顶部显示时间，网络时的背景色 -->
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
